@@ -1,3 +1,9 @@
+25/04/2011 OsiSpx
+  - add methods to set/get/check timelimit
+  - fix bug in solve methods where cached result vectors where not cleared
+  - fix setWarmStart to swap status for slack variables as in getWarmStart
+  - fix caching flags (bitwise negation is ~, not !)
+
 01/04/2011 OsiGlpk
   - if initial basis is invalid or singular in initialSolve or resolve,
     construct advanced basis and try again
